test/libsolidity/syntaxTests/parsing/import_complex.sol
import {hello, world} from "hello";
// ----
// ParserError: (0-35): Source "hello" not found: File not supplied initially.
